india	5
science	3