@@ -1,1 +1,1 @@
-https://news.google.co.in/news/section?cf=all&pz=1&ned=in&topic=n&siidp=f972be75a73f645d3b28154d7d23764de320&ict=ln&ar=1492488183
+https://news.google.co.in/news/section?cf=all&pz=1&ned=in&topic=e&siidp=564e6eaddfd79ccf073ed5b3919f09f6aa81&ict=ln
